--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -36,4 +36,4 @@ jobs:
           ISSUE_BODY: ${{ github.event.issue.body }}
           REPO_OWNER: ${{ github.repository_owner }}
           REPO_NAME: ${{ github.event.repository.name }}
-        run: node .github/scripts/reply-issue.js
+        run: node .github/scripts/reply-issue.ts
